# StrategicFailureEarlyWarningAgent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/rules/: agents.md
.github/ISSUE_TEMPLATE/: bug_report.yml  case_request.yml
.github/workflows/: ci.yml
configs/: models.yaml  ontology_v1.yaml
configs/cases/: aia_mainland_expansion_strategy.yaml  boeing_quality_strategy.yaml  byd_ev_strategy.yaml  country_garden_property_strategy.yaml  honda_ev_pre_reset.yaml  hsbc_china_cre_strategy.yaml  ping_an_integrated_finance.yaml  tencent_ai_strategic_transformation.yaml  toyota_ev_strategy.yaml
configs/ground_truth/: byd.yaml  honda.yaml  toyota.yaml
configs/truth/: boeing_quality_2024.yaml  byd_ev_2025.yaml  country_garden_2023.yaml  honda_ev_2025.yaml  hsbc_china_cre_2023.yaml  ping_an_2024.yaml  toyota_ev_2025.yaml
data/: honda_ev_strategy_timeline.md
demo/byd/: backtest.json  challenges.json  evidence.json  llm_history.jsonl  report.html  risk_factors.json  risk_memo.md  run_metadata.json  run_summary.json
demo/honda/: backtest.json  challenges.json  evidence.json  llm_history.jsonl  report.html  risk_factors.json  risk_memo.md  run_metadata.json  run_summary.json
demo/toyota/: backtest.json  challenges.json  evidence.json  llm_history.jsonl  report.html  risk_factors.json  risk_memo.md  run_metadata.json  run_summary.json
docs/: README.md  architecture.md  claude_code_benchmark.md  cross_company_results.md  design_report_lite_agent_framework.md  finance_applicability.md  golden_run_honda.md  harness_engineering.md  implementation_plan.md  iteration_log.md  liteagent_architecture.md
docs/essays/: agentic_architecture_research.md  framework_anti_patterns.md
src/liteagent/: __init__.py  agent.py  context.py  errors.py  llm.py  observe.py  parse.py  pipeline.py  state.py  tool.py
src/sfewa/: __init__.py  context.py  llm.py  main.py  reporting.py
tests/: conftest.py
tests/test_agents/: test_context.py  test_dedup.py  test_peer_filings.py  test_quality_gate.py  test_routing.py  test_strategy_discovery.py
tests/test_integration/: test_critical_invariants.py  test_label_leakage.py
tests/test_schemas/: test_evidence_models.py  test_verifier_corpus_default.py
(+75 files in other folders)
